--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US,zh_CN
-url:                https://comori.github.io/HomePage/
+url:                https://comori.me
 
 # Jekyll
 permalink:          /:title/
